--- a/Tools/MonoGame.Content.Builder.Editor/MonoGame.Content.Builder.Editor.Windows.csproj
+++ b/Tools/MonoGame.Content.Builder.Editor/MonoGame.Content.Builder.Editor.Windows.csproj
@@ -13,6 +13,9 @@
     <AssemblyName>mgcb-editor-windows</AssemblyName>
     <AssemblyTitle>MGCB Editor</AssemblyTitle>
     <RuntimeIdentifiers>win-x64</RuntimeIdentifiers>
+    <WarningsAsErrors>false</WarningsAsErrors>
+    <Nullable>disable</Nullable>
+    <WarningLevel>0</WarningLevel>
   </PropertyGroup>
 
   <ItemGroup>
